# rustLearning

./: .gitignore
2nd_chapter/: Cargo.toml
3rd_chapter/src/: main.rs
4th_chapter/: Cargo.toml
4th_chapter/src/: test.rs
5th_chapter/: Cargo.toml
5th_chapter/src/: main.rs
assignment1/src/: main.rs
assignment2/src/: main.rs
axum-tutorial/: .env  Cargo.toml
axum-tutorial/src/: main.rs
axum-tutorial/src/routes/: movies.rs
chapter1/src/: main.rs
chapter4/src/: main.rs
chapter5/src/: main.rs
chapter6/src/: generics.rs  main.rs
chapter7/src/: main.rs
chapter8/src/: main.rs
chapter9/src/: main.rs
cli_app/: Cargo.toml  sample.html  sample.md
cli_app/src/: main.rs
guess_game/src/: main.rs
hello-rust/src/: main.rs  test.rs
rustlings/exercises/01_variables/: variables5.rs
rustlings/exercises/02_functions/: functions1.rs
rustlings/exercises/03_if/: if1.rs
rustlings/exercises/quizzes/: quiz1.rs
second_chapter/: Cargo.toml
second_chapter/src/: main.rs
src/: main.rs
third_chapter/: Cargo.toml
third_chapter/src/: main.rs
todo_app/src/: main.rs
tokio-tutorial/: Cargo.toml
tokio-tutorial/src/: main.rs
