[package]
name = "axum-tutorial"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
chrono = { version = "0.4.42", features = ["serde"] }
dotenvy = "0.15.7"
serde = "1.0.228"
serde_json = "1.0.148"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "migrate"] }
tokio = { version = "1.49.0", features = ["full"] }
tower = "0.5.2"
uuid = {version = "1.19.0", features = ["serde", "v4"]}
